:bug: Fix overlapping fade stripe

--- a/frontend/scss/components/organisms/search.scss
+++ b/frontend/scss/components/organisms/search.scss
@@ -60,6 +60,11 @@
     margin: 0 auto;
   }
 
+  &-form {
+    position: relative;
+    z-index: 2;
+  }
+
   &-field {
     width: 100%;
 
